--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "@redwoodjs/forms": "6.6.4",
     "@redwoodjs/router": "6.6.4",
     "@redwoodjs/web": "6.6.4",
+    "@sentry/cli": "^2.28.6",
+    "@sentry/react": "^7.102.1",
     "bootstrap": "^5.3.2",
     "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
@@ -29,5 +31,8 @@
     "@redwoodjs/vite": "6.6.4",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15"
+  },
+  "scripts": {
+    "sentry:sourcemaps": "sentry-cli sourcemaps inject --org northstarpms --project javascript-react ./web/dist && sentry-cli sourcemaps upload --org northstarpms --project javascript-react ./web/dist"
   }
 }
